天地模組化、head補充

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body>
         <!-- Animation -->
         <div class="animation">
-            <button type="button" class="skip_animation">跳過</button>
+            <button type="button" class="skip_animation">跳過 esc</button>
             <div class="logo">
                 <svg
                     width="62"
@@ -245,16 +245,7 @@
         <!-- orange background -->
         <img class="orange" src="./images/OrangeBackground.svg" alt="bgimg" />
         <!-- header and navbar -->
-        <header>
-            <nav>
-                <ul>
-                    <li><a class="active" href="#">首頁</a></li>
-                    <li><a class="active" href="homework.html">作業區</a></li>
-                    <!-- <li><a href="resume.html">我的履歷</a></li>
-                    <li><a href="contact.html">聯絡方式</a></li> -->
-                </ul>
-            </nav>
-        </header>
+        <header></header>
         <main>
             <section class="left table">
                 <h1>
@@ -398,29 +389,8 @@
                 <img class="myPic" src="./images/myselfL.jpg" alt="生活照" />
             </section>
         </main>
-        <footer>
-            <a
-                href="https://www.facebook.com/profile.php?id=100000500770890"
-                target="_blank"
-                ><img
-                    src="./images/facebook.svg"
-                    alt="facebook"
-                    title="facebook page"
-            /></a>
-            <a
-                href="https://www.instagram.com/aac219oo?utm_source=qr"
-                target="_blank"
-                ><img
-                    src="./images/instagram.svg"
-                    alt="instagram"
-                    title="instagram page"
-            /></a>
-            <a
-                href="https://linevoom.line.me/user/_de9WAjpSg2-1sSHf2bVtXTMnX6z4t05IrLZWDO0?utm_medium=windows&utm_source=desktop&utm_campaign=Profile"
-                target="_blank"
-                ><img src="./images/line.svg" alt="line" title="line"
-            /></a>
-        </footer>
+        <footer></footer>
     </body>
     <script src="./js/app.js"></script>
+    <script src="./js/layout.js"></script>
 </html>
