--- a/p24.html
+++ b/p24.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>`text-decoration` 混合樣式</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <style>
-        h3 {
-            font-size: 2em;
-            color: darkred;
-            /* 類型可以重複撰寫：底線 頂部線 刪除線  */
-            text-decoration: underline overline line-through wavy #ff000055 50%;
-        }
-    </style>
-</head>
-<body>
-    <img class="orange" src="./images/OrangeBackground.svg" alt="bgimg" />
-    <header>
-        <nav>
-            <ul>
-                <li><a class="active" href="/">首頁</a></li>
-                <li><a class="active" href="homework.html">作業區</a></li>
-                <!-- <li><a href="resume.html">我的履歷</a></li>
-                <li><a href="contact.html">聯絡方式</a></li> -->
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="left">
-            <h2>`text-decoration` 混合樣式</h2>
-            <h3>
-                試試看會怎麼樣?
-            </h3>
-            <p>
-                此文字同時擁有波浪底線、頂部線和刪除線 。
-            </p>
-        </section>
-        <section class="right"></section>
-    </main>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>`text-decoration` 混合樣式</title>
+        <link
+            rel="icon"
+            href="./images/6rifx-u8hmw-001.ico"
+            type="image/x-icon"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./css/style.css" />
+        <style type="text/css">
+            h3 {
+                font-size: 2em;
+                color: darkred;
+                /* 類型可以重複撰寫：底線 頂部線 刪除線  */
+                text-decoration: underline overline line-through wavy #ff000055 50%;
+            }
+        </style>
+    </head>
+    <body>
+        <img class="orange" src="./images/OrangeBackground.svg" alt="bgimg" />
+        <header></header>
+        <main>
+            <section class="left">
+                <h2>`text-decoration` 混合樣式</h2>
+                <h3>試試看會怎麼樣?</h3>
+                <p>此文字同時擁有波浪底線、頂部線和刪除線 。</p>
+            </section>
+            <section class="right"></section>
+        </main>
+        <footer></footer>
+    </body>
+    <script src="./js/layout.js"></script>
 </html>
