--- a/p28.html
+++ b/p28.html
@@ -1,54 +1,58 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>`text-shadow` 多重效果</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <style>
-        h2 { font-size: 2.5em; font-weight: bold; }
-        
-        /* 多重陰影疊加範例  */
-        .multi {
-            text-shadow: red 3px 3px 4px, /* 第一層 (最上) */
-                         orange 6px 6px 4px, /* 第二層 */
-                         yellow 9px 9px 4px; /* 第三層 (最底) */
-            color: darkblue;
-        }
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>`text-shadow` 多重效果</title>
+        <link
+            rel="icon"
+            href="./images/6rifx-u8hmw-001.ico"
+            type="image/x-icon"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./css/style.css" />
+        <style type="text/css">
+            h2 { font-size: 2.5em; font-weight: bold; }
 
-        /* 邊框效果應用：將字體顏色設為透明，使用陰影模擬邊框  */
-        .border-effect {
-            color: #00000000; /* 透明  */
-            text-shadow: yellow 0 0 0, /* 背景色 */
-                         black 2px 0 0, /* 右邊框 */
-                         black 0 2px 0, /* 下邊框 */
-                         black -2px 0 0, /* 左邊框 */
-                         black 0 -2px 0; /* 上邊框 */
-            background-color: #ddd; /* 為了看到透明字體下的邊框 */
-        }
-    </style>
-</head>
-<body>
-    <img class="orange" src="./images/OrangeBackground.svg" alt="bgimg" />
-    <header>
-        <nav>
-            <ul>
-                <li><a class="active" href="/">首頁</a></li>
-                <li><a class="active" href="homework.html">作業區</a></li>
-                <!-- <li><a href="resume.html">我的履歷</a></li>
-                <li><a href="contact.html">聯絡方式</a></li> -->
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="left">
-            <h2>`text-shadow` 多重效果</h2>
-            <h2 class="multi">這麼多層眼睛好累</h2>
-        
-            <h2>`text-shadow` 邊框效果</h2>
-            <h2 class="border-effect">很少看到這樣的效果</h2>
-        </section>
-        <section class="right"></section>
-    </main>
-</body>
+            /* 多重陰影疊加範例  */
+            .multi {
+                text-shadow: red 3px 3px 4px, /* 第一層 (最上) */
+                             orange 6px 6px 4px, /* 第二層 */
+                             yellow 9px 9px 4px; /* 第三層 (最底) */
+                color: darkblue;
+            }
+
+            /* 邊框效果應用：將字體顏色設為透明，使用陰影模擬邊框  */
+            .border-effect {
+                color: #00000000; /* 透明  */
+                text-shadow: yellow 0 0 0, /* 背景色 */
+                             black 2px 0 0, /* 右邊框 */
+                             black 0 2px 0, /* 下邊框 */
+                             black -2px 0 0, /* 左邊框 */
+                             black 0 -2px 0; /* 上邊框 */
+                background-color: #ddd; /* 為了看到透明字體下的邊框 */
+            }
+        </style>
+    </head>
+    <body>
+        <img class="orange" src="./images/OrangeBackground.svg" alt="bgimg" />
+        <header></header>
+        <main>
+            <section class="left">
+                <h2>`text-shadow` 多重效果</h2>
+                <h2 class="multi">這麼多層眼睛好累</h2>
+
+                <h2>`text-shadow` 邊框效果</h2>
+                <h2 class="border-effect">很少看到這樣的效果</h2>
+            </section>
+            <section class="right"></section>
+        </main>
+        <footer></footer>
+    </body>
+    <script src="./js/layout.js"></script>
 </html>
