--- a/sample.html
+++ b/sample.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>作業區</title>
+        <meta name="author" content="James Hsu" />
+        <title>Sample</title>
         <link
             rel="icon"
             href="./images/6rifx-u8hmw-001.ico"
@@ -20,14 +21,7 @@
     <body>
         <img class="orange" src="./images/OrangeBackground.svg" alt="bgimg" />
         <header></header>
-        <main>
-            <section class="left">
-                <ul>
-                    <li><a href="100218340.html">04.增加網頁顯示技術</a></li>
-                </ul>
-            </section>
-            <section class="right"></section>
-        </main>
+        <main></main>
         <footer></footer>
     </body>
     <script src="./js/layout.js"></script>
