--- a/homework.html
+++ b/homework.html
@@ -23,6 +23,8 @@
         <main>
             <section class="left">
                 <ul>
+                    <li><a href="./html.cafe/02.html">02.打造第一個網頁</a></li>
+                    <li><a href="https://www.chiayu.somee.com/" target="_blank">03.網域名稱與服務內容</a></li>
                     <li><a href="100218340.html">04.增加網頁顯示技術</a></li>
                 </ul>
             </section>
