header手機板加上漢堡選單

--- a/web_control/header.html
+++ b/web_control/header.html
@@ -1,4 +1,7 @@
 <nav>
+    <button class="menu-toggle" id="menu-toggle" aria-label="切換選單">
+        ☰
+    </button>
     <ul>
         <li><a class="active" href="/index.html">首頁</a></li>
         <li><a class="active" href="/homework.html">作業區</a></li>
@@ -6,3 +9,4 @@
             <li><a href="contact.html">聯絡方式</a></li> -->
     </ul>
 </nav>
+
