1.簡介調整 2.新增logo、修改生活照 3.修改loadPart使用async

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <tr style="border-top: 2px solid gray">
                         <td style="width: 20%">自我簡介</td>
                         <td style="width: 80%">
-                            我是許家瑜，曾在麥斯科技有限公司及哲煜科技股份有限公司擔任前端工程師、PM等職位，過去在軍隊工作四年，退伍後到南西雅圖學院就讀1年，之後因家庭因素回國就業，因興趣使然開始學習程式語言。
+                            你好，我是許家瑜，也可以叫我James。曾在麥斯科技有限公司擔任PM、前端工程師以及在哲煜科技股份有限公司擔任前端工程師等職位，過去在當工程師之前以在軍隊工作四年，退伍後到南西雅圖學院就讀1年，之後因家庭因素回國就業，因興趣使然開始學習程式語言，走上程式設計之路。
                         </td>
                     </tr>
                     <tr>
@@ -314,6 +314,11 @@
                                 alt="React"
                             />
                             <img
+                                src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg"
+                                title="Python"
+                                alt="Python"
+                            />
+                            <img
                                 style="width: 45px"
                                 src="./images/AI_Application_Icon.ico"
                                 alt="AI"
@@ -357,6 +362,11 @@
                                 <li>
                                     <a href="https://ccs.ncl.edu.tw/"
                                         >國家圖書館 漢學研究中心</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="https://www.metro.taipei/"
+                                        >臺北捷運運量數據管理平台</a
                                     >
                                 </li>
                                 <li>
