--- a/web_control/header.html
+++ b/web_control/header.html
@@ -1,3 +1,6 @@
+<a href="/" title="回首頁" class="JHlogo"
+    ><img src="/images/JH-logo.svg" alt="logo"
+/></a>
 <nav>
     <button class="menu-toggle" id="menu-toggle" aria-label="切換選單">
         ☰
@@ -9,4 +12,3 @@
             <li><a href="contact.html">聯絡方式</a></li> -->
     </ul>
 </nav>
-
