header調整、新增作業05

--- a/homework.html
+++ b/homework.html
@@ -26,6 +26,7 @@
                     <li><a href="./html.cafe/02.html">02.打造第一個網頁</a></li>
                     <li><a href="https://www.chiayu.somee.com/" target="_blank">03.網域名稱與服務內容</a></li>
                     <li><a href="100218340.html">04.增加網頁顯示技術</a></li>
+                    <li><a href="100218476.html">05.表格練習</a></li>
                 </ul>
             </section>
             <section class="right"></section>
