--- a/web_control/header.html
+++ b/web_control/header.html
@@ -6,8 +6,17 @@
         ☰
     </button>
     <ul>
-        <li><a class="active" href="/index.html">首頁</a></li>
-        <li><a class="active" href="/homework.html">作業區</a></li>
+        <li>
+            <button
+                class="menu-toggle menu-close"
+                id="menu-close"
+                aria-label="關閉選單"
+            >
+                ✖
+            </button>
+        </li>
+        <li><a href="/index.html">首頁</a></li>
+        <li><a href="/homework.html">作業區</a></li>
         <!-- <li><a href="resume.html">我的履歷</a></li>
             <li><a href="contact.html">聯絡方式</a></li> -->
     </ul>
