--- a/100218476.html
+++ b/100218476.html
@@ -23,6 +23,9 @@
               width: 100%;
               background-color: #fff;
             }
+            caption {
+                font-size: 2rem;
+            }
             thead {
                 background-color: #cdfcff;
             }
@@ -57,6 +60,7 @@
                     <colgroup>
                         <col span="2" style="background-color: #D6EEEE" />
                     </colgroup>
+                    <caption>雲端服務產品功能比較表</caption>
                     <thead>
                         <th colspan="2">方案比較</th>
                         <td>AWS</td>
