更新ico、新增履歷頁面

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>作業區</title>
+        <meta name="author" content="James Hsu" />
+        <title>James Hsu | 履歷</title>
         <link
             rel="icon"
             href="./images/okz8k-sln39-001.ico"
@@ -20,17 +21,7 @@
     <body>
         <img class="orange" src="./images/OrangeBackground.svg" alt="bgimg" />
         <header></header>
-        <main>
-            <section class="left">
-                <ul>
-                    <li><a href="./html.cafe/02.html">02.打造第一個網頁</a></li>
-                    <li><a href="https://www.chiayu.somee.com/" target="_blank">03.網域名稱與服務內容</a></li>
-                    <li><a href="100218340.html">04.增加網頁顯示技術</a></li>
-                    <li><a href="100218476.html">05.表格練習</a></li>
-                </ul>
-            </section>
-            <section class="right"></section>
-        </main>
+        <main></main>
         <footer></footer>
     </body>
     <script src="./js/layout.js"></script>
