--- a/100218340.html
+++ b/100218340.html
@@ -6,7 +6,7 @@
         <title>04.增加網頁顯示技術</title>
         <link
             rel="icon"
-            href="./images/6rifx-u8hmw-001.ico"
+            href="./images/okz8k-sln39-001.ico"
             type="image/x-icon"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
