--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <meta name="author" content="James Hsu" />
         <meta name="robots" content="index, follow" />
         <meta name="description" content="這是James Hsu的個人網站。" />
-        <title>首頁 | 許家瑜的自我介紹</title>
+        <title>James Hsu | 首頁</title>
         <link
             rel="icon"
-            href="./images/6rifx-u8hmw-001.ico"
+            href="./images/okz8k-sln39-001.ico"
             type="image/x-icon"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
