--- a/p24.html
+++ b/p24.html
@@ -6,7 +6,7 @@
         <title>`text-decoration` 混合樣式</title>
         <link
             rel="icon"
-            href="./images/6rifx-u8hmw-001.ico"
+            href="./images/okz8k-sln39-001.ico"
             type="image/x-icon"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
