--- a/p27.html
+++ b/p27.html
@@ -6,7 +6,7 @@
         <title>`text-shadow` 基本用法</title>
         <link
             rel="icon"
-            href="./images/6rifx-u8hmw-001.ico"
+            href="./images/okz8k-sln39-001.ico"
             type="image/x-icon"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
