--- a/sample.html
+++ b/sample.html
@@ -7,7 +7,7 @@
         <title>Sample</title>
         <link
             rel="icon"
-            href="./images/6rifx-u8hmw-001.ico"
+            href="./images/okz8k-sln39-001.ico"
             type="image/x-icon"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
