--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="default-src 'self'; script-src 'self' https://code.jquery.com 'sha256-vvt4KWwuNr51XfE5m+hzeNEGhiOfZzG97ccfqGsPwvE='; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' https://upload.wikimedia.org; object-src 'none';"
+        />
         <meta name="author" content="James Hsu" />
         <meta name="robots" content="index, follow" />
         <meta name="description" content="這是James Hsu的個人網站。" />
@@ -93,7 +97,6 @@
                     viewBox="0 0 63 81"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
-                    style="margin-right: 2rem"
                 >
                     <path
                         d="M57.8799 22.7426L59.8985 22.1713L59.2315 20.1823C57.4447 14.8546 54.3993 10.5157 50.0972 7.23067C45.6948 3.84556 39.7877 2.27274 32.608 2.27274C27.4621 2.27274 22.7844 3.17884 18.6126 5.03661L18.6126 5.0366L18.6072 5.03899C14.4837 6.88971 11.152 9.47257 8.68211 12.8103L8.68208 12.8103L8.67442 12.8208C6.19937 16.2113 4.97161 20.1138 4.97161 24.4546C4.97161 29.7207 6.61041 34.2373 9.95761 37.8577L9.96426 37.8649L9.97098 37.872C13.3423 41.4477 18.4606 43.9287 25.0559 45.4916L25.0607 45.4927L36.6971 48.22L36.7 48.2207C40.0288 48.9955 42.2376 50.1181 43.5702 51.4269L43.5767 51.4333L43.5833 51.4397C44.8771 52.6873 45.5171 54.1924 45.5171 56.0909C45.5171 58.3041 44.47 60.3282 41.891 62.1972C39.4 63.9944 35.8882 65 31.1534 65C27.037 65 23.9105 64.1206 21.6107 62.5379C19.3769 60.9802 17.7805 58.608 16.9082 55.2275L16.4122 53.3056L14.4865 53.787L4.30472 56.3325L2.43824 56.7991L2.83217 58.6822C4.1724 65.0892 7.40448 70.0782 12.549 73.4856C17.6219 76.8456 23.9277 78.4546 31.3353 78.4546C36.9813 78.4546 42.0255 77.5081 46.4203 75.5549C50.7824 73.6162 54.2625 70.9252 56.7717 67.448C59.3293 63.9461 60.608 59.9564 60.608 55.5455C60.608 50.2112 58.9172 45.6988 55.4415 42.187C52.0243 38.704 46.9788 36.2573 40.5368 34.6934C40.5359 34.6932 40.5351 34.693 40.5343 34.6928L30.184 32.1506C30.1827 32.1503 30.1814 32.15 30.1801 32.1497C26.1681 31.1463 23.4637 29.9455 21.8544 28.6632C20.4309 27.5288 19.6989 26.0196 19.6989 23.9091C19.6989 21.6678 20.6958 19.7746 23.06 18.1476L23.0637 18.145C25.5068 16.4556 28.6457 15.5455 32.608 15.5455C35.5343 15.5455 37.7607 16.017 39.3954 16.8343C41.1606 17.7169 42.4764 18.8011 43.4133 20.0586L43.4265 20.0763L43.4401 20.0937C44.5126 21.4687 45.3007 22.855 45.8277 24.2516L46.4762 25.9701L48.2435 25.4699L57.8799 22.7426Z"
@@ -253,9 +256,9 @@
                     James Hsu.
                 </h1>
                 <table>
-                    <tr style="border-top: 2px solid gray">
-                        <td style="width: 20%">自我簡介</td>
-                        <td style="width: 80%">
+                    <tr>
+                        <td class="width20">自我簡介</td>
+                        <td class="width80">
                             你好，我是許家瑜，也可以叫我James。曾在麥斯科技有限公司擔任PM、前端工程師以及在哲煜科技股份有限公司擔任前端工程師等職位，過去在當工程師之前以在軍隊工作四年，退伍後到南西雅圖學院就讀1年，之後因家庭因素回國就業，因興趣使然開始學習程式語言，走上程式設計之路。
                         </td>
                     </tr>
@@ -319,12 +322,10 @@
                                 alt="Python"
                             />
                             <img
-                                style="width: 45px"
                                 src="./images/AI_Application_Icon.ico"
                                 alt="AI"
                             />
                             <img
-                                style="width: 45px"
                                 src="./images/ps.ico"
                                 alt="PS"
                             />
