--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
+        <div class="mask w-full h-full fixed top-0 left-0 bg-[#e08958] z-[9998]"></div>
         <img class="orange" src="./assets/images/OrangeBackground.svg" alt="bgimg" />
         <div id="app"></div>
     </body>
