解決mask閃爍問題

--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <div class="mask w-full h-full fixed top-0 left-0 bg-[#e08958] z-[9998]"></div>
-        <img class="orange" src="./assets/images/OrangeBackground.svg" alt="bgimg" />
+        <div
+            class="mask w-full h-full fixed top-0 left-0 bg-[#e08958] z-[9998] opacity-100 transition-opacity ease-out duration-500"
+        ></div>
+        <img
+            class="orange"
+            src="./assets/images/OrangeBackground.svg"
+            alt="bgimg"
+        />
         <div id="app"></div>
     </body>
     <script type="module" src="./js/app.js"></script>
