--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
     </head>
     <body>
         <div
-            class="mask w-full h-full fixed top-0 left-0 bg-[#e08958] z-[9998] opacity-100 transition-opacity ease-out duration-500"
-        ></div>
+            class="mask flex flex-col items-center justify-center w-full h-full fixed top-0 left-0 bg-[#e08958] z-[9998] opacity-100 transition-opacity ease-out duration-500"
+        >
+            <div class="spinner">
+                <div class="spinner-container" id="spinner"></div>
+            </div>
+        </div>
         <img
             class="orange"
             src="./assets/images/OrangeBackground.svg"
@@ -45,4 +49,19 @@
         <div id="app"></div>
     </body>
     <script type="module" src="./js/app.js"></script>
+    <script>
+        // spinner animation
+        const spinner = document.getElementById('spinner');
+        const numDots = 6;
+        const radius = 20;
+
+        for (let i = 0; i < numDots; i++) {
+            const dot = document.createElement('div');
+            dot.classList.add('dot', `dot-${i}`);
+            const angle = (i / numDots) * Math.PI * 2;
+            const x = Math.cos(angle) * radius;
+            const y = Math.sin(angle) * radius;
+            spinner.appendChild(dot);
+        }
+    </script>
 </html>
