--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="James Hsu" />
         <meta name="robots" content="index, follow" />
-        <meta name="description" content="這是James Hsu的Blog。" />
+        <meta name="description" content="歡迎來到James Hsu的Blog。" />
         <title>首頁 | James Hsu</title>
         <link
             rel="icon"
@@ -29,6 +29,19 @@
                 }
             }
         </script>
+        <script type="text/tailwindcss">
+            module.exports = {
+                theme: {
+                    extend: {
+                        colors: {
+                            'primary': { 
+                                500: 'var(--color-primary-500)',
+                            },
+                        },
+                    },
+                },
+            }
+        </script>
         <script src="./assets/lib/tailwindcss/browser@4.js"></script>
         <link rel="stylesheet" href="./assets/css/animation.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
@@ -41,11 +54,6 @@
                 <div class="spinner-container" id="spinner"></div>
             </div>
         </div>
-        <img
-            class="orange"
-            src="./assets/images/OrangeBackground.svg"
-            alt="bgimg"
-        />
         <div id="app"></div>
     </body>
     <script type="module" src="./js/app.js"></script>
