動畫背景顏色隨主題色變化

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </head>
     <body>
         <div
-            class="mask flex flex-col items-center justify-center w-full h-full fixed top-0 left-0 bg-[#e08958] z-[9998] opacity-100 transition-opacity ease-out duration-500"
+            class="mask flex flex-col items-center justify-center w-full h-full fixed top-0 left-0 z-[9998] opacity-100 transition-opacity ease-out duration-500"
         >
             <div class="spinner">
                 <div class="spinner-container" id="spinner"></div>
