--- a/index.html
+++ b/index.html
@@ -32,32 +32,29 @@
                 }
             }
         </script>
-        <script type="text/tailwindcss">
-            module.exports = {
-                theme: {
-                    extend: {
-                        colors: {
-                            'primary': {
-                                500: 'var(--color-primary-500)',
-                            },
-                        },
-                    },
-                },
-            }
-        </script>
         <script src="./assets/libs/tailwindcss/browser@4.js"></script>
         <link rel="stylesheet" href="./assets/css/animation.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <style type="text/tailwindcss">
+            @custom-variant dark (&:where(.dark, .dark *));
+            @theme {
+                --color-primary: #e08958;
+                --color-light-text: #222222;
+                --color-light-bg: #FDFAF5;
+                --color-dark-text: #f1f1f1;
+                --color-dark-bg: #363636;
+            }
+        </style>
     </head>
     <body>
         <div
-            class="mask flex flex-col items-center justify-center w-full h-full fixed top-0 left-0 z-[9998] opacity-100 transition-opacity ease-out duration-500"
+            class="mask bg-primary flex flex-col items-center justify-center w-full h-full fixed top-0 left-0 z-[9998] opacity-100 transition-opacity ease-out duration-500"
         >
             <div class="spinner">
                 <div class="spinner-container" id="spinner"></div>
             </div>
         </div>
-        <div id="app"></div>
+        <div id="app" class="flex justify-center items-center dark:bg-[#363636] bg-(--color-light-bg)"></div>
     </body>
     <script type="module" src="./js/app.js"></script>
     <script>
