1.精選作品集調整 2.新增header nav路由提示

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="spinner-container" id="spinner"></div>
             </div>
         </div>
-        <div id="app" class="flex justify-center items-center dark:bg-[#363636] bg-(--color-light-bg)"></div>
+        <div id="app" class="flex justify-center items-center h-[inherit] bg-light-bg dark:bg-dark-bg"></div>
     </body>
     <script type="module" src="./js/app.js"></script>
     <script>
