作品詳情調整

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     "@vue/devtools-api": "./assets/libs/devtools-api@6.5.0/index.js",
                     "gsap": "./assets/libs/gsap-public/esm/index.js",
                     "gsap/ScrollTrigger": "./assets/libs/gsap-public/esm/ScrollTrigger.js",
-                    "gsap/ScrollSmoother": "./assets/libs/gsap-public/esm/ScrollSmoother.js"
+                    "gsap/ScrollSmoother": "./assets/libs/gsap-public/esm/ScrollSmoother.js",
+                    "gsap/Draggable": "./assets/libs/gsap-public/esm/Draggable.js"
                 }
             }
         </script>
