feat: Add project detail pages, various homework sections, and internationalization support with new images and data.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
         <!-- Canonical: 標準網址，避免重複內容 -->
         <link rel="canonical" href="https://aac219oo.github.io/" />
+        
+        <!-- Preload Critical Image -->
+        <link rel="preload" as="image" href="./assets/images/yehlier-scenery.jpg" fetchpriority="high" />
 
         <!-- =========================================
              Open Graph / Social Media (FB, Line, LinkedIn)
